--- a/pom.xml
+++ b/pom.xml
@@ -45,11 +45,11 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>org.modelmapper</groupId>
             <artifactId>modelmapper</artifactId>
             <version>2.3.5</version>
-        </dependency>
+        </dependency>-->
     </dependencies>
 
     <build>
